# Catalogacion-Productos

./: ARCHITECTURE_DIAGRAM.md  REFACTORING_SUMMARY.md  cli_demo.py  pyproject.toml  requirements.txt  test_llm_dict_interface.py  test_schema_verification.py
data/: faiss.index
scripts/: create_tables.py  migrate_business_column.py  reset_tables.py
src/application/: __init__.py
src/application/ports/: __init__.py  category_profile_repository.py  category_repository.py  embedding_repository.py  embedding_service.py  exclusion_repository.py  llm_service.py  product_category_exception_repository.py  product_repository.py  prompt_service.py
src/config/: settings.py
src/domain/: __init__.py
src/domain/categories/: category.py  errors.py
src/domain/classification/: category_constraints.py  category_exception.py  category_profile.py  eligibility_policy.py  product_context.py  result.py
src/domain/entities/: __init__.py
src/domain/products/: errors.py  product.py
src/domain/services/: category_semantic_search_service.py  duplicate_detection_service.py
src/domain/specifications/: __init__.py  brand_business_policy.py  eligibility_policy.py  semantic_uniqueness_spec.py
src/domain/value_objects/: semantic_hash.py
src/infrastructure/embeddings/: errors.py  fake_embedding_service.py  sentence_transformers_embedding_service.py
src/infrastructure/llm/: errors.py
src/prompts/: predict_category_sheet_data.yaml  predict_sheet_data.yaml
src/utils/: __init__.py  circuit_breaker.py  hash.py  json.py  retry.py  vectors.py
tests/unit/: brand_policy_example.py
(+82 files in other folders)
